--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-shell",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "simple-shell.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
